--- a/upgrade.html
+++ b/upgrade.html
@@ -22,11 +22,19 @@
     <h2 class="text-2xl font-bold text-center mb-6">✨ Pilih Founder Pack ✨</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <!-- Gold -->
-      <div class="bg-gray-700 rounded-xl p-6 text-center shadow">
-        <h3 class="text-lg font-bold mb-2">Gold Pack</h3>
-        <p class="text-3xl font-bold text-yellow-300">Rp 10.000</p>
-        <p class="text-sm text-gray-300 mt-2">1x Monster Rare, Full Set (Rare), Item & Potion</p>
+      <!-- GOLD -->
+        <div class="bg-gray-900 p-6 rounded-2xl shadow relative overflow-hidden">
+          <h4 class="text-xl font-bold mb-1">Gold Pack</h4>
+          <p class="text-gray-400 line-through">Rp 100.000</p>
+          <p class="text-2xl font-bold text-yellow-400 mb-2">Rp 10.000</p>
+          <p class="text-xs text-gray-300 mb-2">Bonus Referral: 10%</p>
+          <ul class="text-sm text-gray-300 mb-4 space-y-1 text-left">
+            <li>🪙 <strong>1x Monster Rare</strong> (random)</li>
+            <li>🪙 <strong>1x Full Set Equipment (Rare)</strong></li>
+            <li>🪙 <strong>5x Potion Exp (Small)</strong></li>
+            <li>🪙 <strong>3x Alat Tangkap (Basic)</strong></li>
+            <li>🪙 <strong>10x Item Uncommon</strong></li>
+          </ul>
         <button
           id="btn-gold"
           class="mt-4 bg-yellow-500 hover:bg-yellow-400 px-4 py-2 rounded-lg font-bold w-full"
