--- a/upgrade.html
+++ b/upgrade.html
@@ -31,8 +31,8 @@
           <ul class="text-sm text-gray-300 mb-4 space-y-1 text-left">
             <li>🪙 <strong>1x Monster Rare</strong> (random)</li>
             <li>🪙 <strong>1x Full Set Equipment (Rare)</strong></li>
-            <li>🪙 <strong>5x Potion Exp (Small)</strong></li>
-            <li>🪙 <strong>3x Alat Tangkap (Basic)</strong></li>
+            <li>🪙 <strong>25x Potion Exp (Small)</strong></li>
+            <li>🪙 <strong>15x Alat Tangkap (Basic)</strong></li>
             <li>🪙 <strong>10x Item Uncommon</strong></li>
           </ul>
         <button
@@ -41,22 +41,44 @@
         >Beli Sekarang</button>
       </div>
 
-      <!-- Platinum -->
-      <div class="bg-gray-700 rounded-xl p-6 text-center shadow">
-        <h3 class="text-lg font-bold mb-2">Platinum Pack</h3>
-        <p class="text-3xl font-bold text-yellow-300">Rp 50.000</p>
-        <p class="text-sm text-gray-300 mt-2">1x Monster Legendary, Full Set (Epic), Item & Potion</p>
+      <!-- PLATINUM -->
+        <div class="bg-gray-900 p-6 rounded-2xl shadow-xl relative border-4 border-yellow-400 overflow-hidden">
+          <span class="absolute top-6 right-[-40px] rotate-45 bg-yellow-400 text-black text-xs md:text-sm font-bold px-10 py-1 shadow-md animate-pulse inline-block">
+  BEST CHOICE
+</span>
+          <h4 class="text-xl font-bold mb-1">Platinum Pack</h4>
+          <p class="text-gray-400 line-through">Rp 500.000</p>
+          <p class="text-2xl font-bold text-yellow-400 mb-2">Rp 50.000</p>
+          <p class="text-xs text-gray-300 mb-2">Bonus Referral: 10%</p>
+          <ul class="text-sm text-gray-300 mb-4 space-y-1 text-left">
+            <li>💿 <strong>1x Monster Legendary</strong> (random)</li>
+            <li>💿 <strong>1x Full Set Equipment (Epic)</strong></li>
+            <li>💿 <strong>25x Potion Exp (Medium)</strong></li>
+            <li>💿 <strong>15x Alat Tangkap (Advanced)</strong></li>
+            <li>💿 <strong>10x Item Rare</strong></li>
+            <li>💿 <strong>Exclusive Founder Badge</strong></li>
+          </ul>
         <button
           id="btn-platinum"
           class="mt-4 bg-yellow-500 hover:bg-yellow-400 px-4 py-2 rounded-lg font-bold w-full"
         >Beli Sekarang</button>
       </div>
 
-      <!-- Diamond -->
-      <div class="bg-gray-700 rounded-xl p-6 text-center shadow">
-        <h3 class="text-lg font-bold mb-2">Diamond Pack</h3>
-        <p class="text-3xl font-bold text-yellow-300">Rp 100.000</p>
-        <p class="text-sm text-gray-300 mt-2">Monster Legendary Eksklusif + Full Legendary Set & Nama di Credits</p>
+      <!-- DIAMOND -->
+        <div class="bg-gray-900 p-6 rounded-2xl shadow-lg relative overflow-hidden">
+          <h4 class="text-xl font-bold mb-1">Diamond Pack</h4>
+          <p class="text-gray-400 line-through">Rp 1.000.000</p>
+          <p class="text-2xl font-bold text-yellow-400 mb-2">Rp 100.000</p>
+          <p class="text-xs text-gray-300 mb-2">Bonus Referral: 10%</p>
+          <ul class="text-sm text-gray-300 mb-4 space-y-1 text-left">
+            <li>💎 <strong>1x Monster Legendary Eksklusif</strong></li>
+            <li>💎 <strong>1x Full Set Equipment (Legendary)</strong></li>
+            <li>💎 <strong>25x Potion Exp (Large)</strong></li>
+            <li>💎 <strong>15x Alat Tangkap (Pro)</strong></li>
+            <li>💎 <strong>10x Item Legendary</strong></li>
+            <li>💎 <strong>Exclusive Founder Badge</strong></li>
+            <li>💎 <strong>Nama di Credits</strong></li>
+          </ul>
         <button
           id="btn-diamond"
           class="mt-4 bg-yellow-500 hover:bg-yellow-400 px-4 py-2 rounded-lg font-bold w-full"
